# toxindex

./: .dockerignore  .env-template  .envrc  .gcp-project  .gitattributes  .gitignore  .gitmodules  Dockerfile  Dockerfile.base  Dockerfile.general  Dockerfile.openai  Dockerfile.pathway  Dockerfile.ranking  Dockerfile.rap  Dockerfile.raptool  Dockerfile.sparql  Dockerfile.sygma  README.md  SOCKET_IO_OPTIMIZATION.md  app.py.old  build_and_test_probra.sh  cloudbuild-frontend.yaml  cloudbuild-fullstack.yaml  cloudbuild-triggers.yaml  cloudbuild-with-monitoring.yaml  cloudbuild.yaml  deploy.sh  deployment.yaml  dev_startup.sh  develop.sh  docker-compose.yaml  flake copy.nix  flake.nix  flyway.conf  metabolites.json  metabolites_parent_DBP.json  miniapp.py  package-lock.json  package.json  pdaa_phthalate_inchis.txt  (+21 more)
.bb/: dependencies.txt
.bin/: check-secrets
.dvc/: config
.elasticbeanstalk/: config.yml
chats/: probra_result_1b63cd09ec0f4c7fa6c43c67af979dc5.md  probra_result_232e716625bb4af797a1d03ab57c04c3.md  probra_result_3f4c5b09c2a04cb69b776074cfa5eb36.md  probra_result_4a381622e4a94158b7712a75b3a0ab38.md  probra_result_669864f3e41c4ffeb5910a203a5c52e0.md  probra_result_8e45f81b0ac64db4b592bf4f0aea7404.md  probra_result_9ce5d1beec4f4cd6aca1d724a685acf7.md  probra_result_a46f4ff3fc87455aa936ccf9360f2418.md  probra_result_c5e3ed3c1e9d46c4a0fa40bcd4719324.md  probra_result_d562371a08894f04b34ee7b077c6f631.md  probra_result_dbc768f53db14cf5b3b6e450a06da37b.md  probra_result_ede3b4cdd0a649e4b0d2992f059e02dc.md  probra_result_f4672bb1f04b4987896ac263175ea346.md  probra_result_f9c8a558d1334f34884505c97f792bf7.md  probra_result_fb3de5dcfade4e149b20a19c434833d4.md  probra_result_fefb75a9d27446169e9468ec6e230480.md
config/: data_paths.yaml
docs/: Cloud-Build-Setup.md  Cloud-Monitoring-Setup.md  Data-Paths-Migration.md  Health-Checks.md  cloud_logging.md  conf.py  index.rst  multi-image-architecture.md  production-architecture.md
external_api/: example_usage.py  test_toxrap_api.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
guide/: docusaurus.config.ts  package-lock.json  package.json  sidebars-internal.ts  sidebarsCommunity.js  sidebarsDeveloper.js
k8s/: backend-deployment.yaml  celery-worker-deployment.yaml  celery-worker-general-deployment.yaml  celery-worker-general-hpa.yaml  celery-worker-openai.yaml  celery-worker-pathway-deployment.yaml  celery-worker-pathway-hpa.yaml  celery-worker-ranking-deployment.yaml  celery-worker-ranking-hpa.yaml  celery-worker-rap-hpa.yaml  celery-worker-rap.yaml  celery-worker-raptool-deployment.yaml  celery-worker-raptool-hpa.yaml  celery-worker-raptool.yaml  celery-worker-sparql.yaml  celery-worker-sygma-hpa.yaml  celery-worker-sygma.yaml  celery-worker-template.yaml  flyway-job.yaml  flyway-migrate-v4-job.yaml  flyway-repair-job.yaml  flyway-repair-v4-job.yaml  redis-listener-deployment.yaml  seed-admin-job.yaml  test-app.yaml
monitoring/: dashboard.yaml  simple-dashboard.yaml
pathway_data/: AOPWikiRDF.ttl  wikipathways.ttl
reports/: Is_Methotrexate_closely_linked_to_hepatotoxicity_in_the_presence_of_alcohol_cons_final_2025-09-10T15-44-15.json  Is_Methotrexate_closely_linked_to_hepatotoxicity_in_the_presence_of_alcohol_cons_final_2025-09-10T15-44-15.md  Is_Methotrexate_closely_linked_to_hepatotoxicity_in_the_presence_of_alcohol_cons_final_2025-09-10T15-45-27.json  Is_Methotrexate_closely_linked_to_hepatotoxicity_in_the_presence_of_alcohol_cons_final_2025-09-10T15-45-27.md  Is_Methotrexate_closely_linked_to_hepatotoxicity_in_the_presence_of_alcohol_cons_final_2025-09-10T15-46-56.json  Is_Methotrexate_closely_linked_to_hepatotoxicity_in_the_presence_of_alcohol_cons_final_2025-09-10T15-46-56.md  Is_Methotrexate_closely_linked_to_hepatotoxicity_in_the_presence_of_alcohol_cons_final_2025-09-10T15-48-42.json  Is_Methotrexate_closely_linked_to_hepatotoxicity_in_the_presence_of_alcohol_cons_final_2025-09-10T15-48-42.md  Is_Methotrexate_closely_linked_to_hepatotoxicity_in_the_presence_of_alcohol_cons_final_2025-09-10T18-42-35.json  Is_Methotrexate_closely_linked_to_hepatotoxicity_in_the_presence_of_alcohol_cons_final_2025-09-10T18-42-35.md  Is_Methotrexate_closely_linked_to_hepatotoxicity_in_the_presence_of_alcohol_cons_final_2025-09-10T18-43-15.json  Is_Methotrexate_closely_linked_to_hepatotoxicity_in_the_presence_of_alcohol_cons_final_2025-09-10T18-50-21.json  (+14 more)
scripts/: shellhook.sh  (+12 more)
services/report/: Dockerfile  app.py  datastore.py  pyproject.toml  requirements.txt  run.sh  s3store.py
services/report/data/: .gitignore  cvae.sqlite.dvc
services/report/model/: report.py
services/report/model/reports/: reprotox.py
services/report/parameterized_reports/: reprotox.Rmd
services/report/report/: app.py  datastore.py
services/report/report/model/: report.py
services/report/report/model/reports/: reprotox.py
services/report/templates/: new_report.html  property.html  reports.html
services/report/templates/reports/: reprotox.html
services/webserver/: Dockerfile  pyproject.toml  requirements.txt  run.sh
services/webserver/webserver/: app.py  datastore.py  login_manager.py  sendgrid_email.py
services/webserver/webserver/controller/: login.py  sendgrid.py  stripe.py
services/webserver/webserver/forms/: registration_form.py
services/webserver/webserver/model/: project.py  report.py  user.py
services/webserver/webserver/resources/: .gitignore  resources.py
services/webserver/webserver/static/services/upload/: testupload.inchi
services/webserver/webserver/templates/: forgot_password.html  index.html  landing.html  layout.html  login.html  register.html
services/webserver/webserver/templates/services/: layout.html
services/webserver/webserver/templates/services/upload/: upload.html
(+290 files in other folders)
