[project]
name = "toxindex"
version = "0.1.0"
description = "Toxindex fullstack environment"
authors = [{ name = "kyu", email = "kyu@insilica.co" }]
dependencies = [
  "email-validator==2.1.0.post1",
  "Flask-SocketIO==5.3.6",
  "gunicorn==21.2.0",
  "gevent>=25.0.0",
  "gevent-websocket==0.10.1",
  "google-cloud-storage",
  "celery",
  "redis",
  "Flask==3.0.0",
  "python-dotenv==1.1.0",
  "requests>=2.32.5",
  "urllib3==2.4.0",
  "flask-login",
  "Flask-WTF==1.2.1",
  "markdown",
  "openai>=1.68.2,<2.0.0",
  "sendgrid==6.10.0",
  "psycopg2-binary==2.9.9",
  "pandas==2.3.1",
  "stripe==4.2.0",
  "annotated-types",
  "rdkit",
  "rapidfuzz",
  "aiohttp",
  "tenacity",
  "pyarrow",
  "fastparquet",
  "seaborn",
  "matplotlib",
  "scikit-learn",
  "cython",
  "blosc2",
  "langchain",
  "langchain-openai",
  "langchain-community",
  "langchain-core",
  "langgraph",
  "agno==2.1.0",
  "typing-extensions",
  "idna",
  "pubchempy",
  "httpx",
  "duckduckgo-search",
  "pydantic",
  "sqlalchemy",
  "numpy",
  "py4cytoscape",
  "langchain-google-community",
  "langchain-core",
  "google-genai",
  "langchain-google-genai",
  "bs4",
  "jsonschema",
  "psutil>=5.9.0",
  "google-cloud-monitoring>=2.0.0",
  "google-cloud-logging>=3.0.0",
  "flask-cors",
  "google-generativeai>=0.8.5",
  "einops>=0.8.1",
  "lxml>=6.0.0",
  "mcp>=1.13.0",
  "qdrant-client>=1.15.1",
  "rdflib>=7.1.4",
  "sentence-transformers>=5.1.0"
]

requires-python = ">=3.12"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["webserver", "workflows", "webserver.tools"]  # Include the tools package
include-package-data = true

[tool.setuptools.package-data]
webserver = ["templates/**", "static/**"]

[tool.uv]
dev-dependencies = []